frontend/src/Pages/ContentPage.module.scss
@import "../helper-styles.scss";

.group {
  @include no-user-select();
  width: 100%;

  align-self: start;

  .info {
    margin-top: 5rem;

    h1 {
      margin-bottom: 2rem;
    }

    p, li {
      font-size: 1.8rem;
      line-height: 2.5rem;
      padding: 0 3rem;
      margin-bottom: 0;
      list-style-type: none;
    }

    .image-wrapper {
      -webkit-user-drag: none;
      float: right;
      width: 50%;
      margin: 0 5rem;
    }

    .loading-image {
      position: static;
    }
  }

  .body {
    margin: 0;
    width: 100%;
  }

}


.buttons {
  height: 5rem;
  margin-top: 5rem;

  button {
    font-size: 2rem;
    font-weight: 500;
    padding-left: 10rem;
    padding-right: 10rem;
  }
}

@media (max-width: $media-width) {
  .buttons {
    width: 100%;
    margin-top: -3rem;
    margin-bottom: 5rem;
  }

  .group {
    .info {
      display: flex;
      flex-direction: column;

      h1 {
        order: 1;
      }

      .image-wrapper {
        width: 100%;
        float: none;
        order: 2;
        margin: 2rem 0;
      }

      .description {
        order: 3;
      }
    }

    .col {
      padding: 0;
      justify-self: center;
    }

    .body {
      height: 100%;
    }
  }

  .title {
    padding: 0 3rem;
  }
}

